# joy

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.js  help.html  ringfit-session.txt  search-index.js  settings.html  source-files.js  src-files.js  trace-ringcon
bluetooth-relay/: Cargo.toml
bluetooth-relay/src/: main.rs
crates/dualshock/: Cargo.toml
crates/dualshock/src/: lib.rs  main.rs
crates/hid-gamepad/: Cargo.toml
crates/hid-gamepad-sys/: Cargo.toml
crates/hid-gamepad-sys/src/: lib.rs
crates/hid-gamepad/src/: error.rs  lib.rs
crates/joycon/: Cargo.toml
crates/joycon-sys/: Cargo.toml
crates/joycon-sys/src/: accessory.rs  imu.rs  lib.rs  light.rs  spi.rs
crates/joycon/src/: hid.rs  image.rs  imu_handler.rs  lib.rs  scan.rs
dualshock/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.DS4.html  struct.DS4Driver.html
dualshock-sys/: Cargo.toml
dualshock-sys/src/: input.rs  lib.rs
dualshock/src/: lib.rs  main.rs
gyromouse/: Cargo.toml  all.html  enum.ClickType.html  fn.diff.html  fn.hid_main.html  fn.main.html  index.html  sidebar-items.js
gyromouse/backend/: index.html  sidebar-items.js  trait.Backend.html
gyromouse/backend/hidapi/: fn.hid_main.html  index.html  sidebar-items.js  struct.HidapiBackend.html
gyromouse/backend/sdl/: fn.sdl_to_sys.html  index.html  sidebar-items.js  struct.ControllerState.html  struct.SDLBackend.html
gyromouse/calibration/: enum.BetterCalibrationState.html  index.html  sidebar-items.js  struct.BetterCalibration.html  struct.Calibration.html  struct.SimpleCalibration.html  type.Entry.html
gyromouse/config/: index.html  sidebar-items.js
gyromouse/config/parse/: fn.action.html  fn.binding.html  fn.cmd.html  fn.comment.html  fn.convert_action_mod.html  fn.empty_line.html  fn.equal_with_space.html  fn.f64_setting.html  fn.gyro_setting.html  fn.gyro_space.html  fn.joykey.html  fn.jsm_parse.html  fn.keyboardkey.html  fn.keys.html  fn.line.html  fn.map_key.html  fn.mapkey.html  fn.mousekey.html  fn.parse_file.html  fn.ring_mode.html  fn.setting.html  fn.special.html  fn.stick_axis.html  fn.stick_mode.html  fn.stick_setting.html  fn.trigger_mode.html  fn.virtkey.html  index.html  sidebar-items.js  type.IRes.html  type.Input.html
gyromouse/config/settings/: index.html  sidebar-items.js  struct.AimStickSettings.html  (+5 more)
gyromouse/engine/: fn.diff.html  index.html  sidebar-items.js  struct.Engine.html  struct.Gyro.html
gyromouse/gyromouse/: index.html  sidebar-items.js  struct.GyroMouse.html
gyromouse/joystick/: enum.FlickStickState.html  index.html  sidebar-items.js  struct.ButtonStick.html  struct.CameraStick.html  struct.FlickStick.html  trait.Stick.html
gyromouse/mapping/: constant.JOYKEY_SIZE.html  constant.MAP_KEY_SIZE.html  constant.VIRTKEY_SIZE.html  enum.Action.html  enum.ExtAction.html  enum.KeyStatus.html  enum.MapKey.html  enum.VirtualKey.html  index.html  sidebar-items.js  struct.Buttons.html  struct.KeyState.html  struct.Layer.html
gyromouse/mappings/: Desktop.txt  overwatch
gyromouse/mouse/: index.html  struct.Mouse.html
gyromouse/opts/: enum.Backend.html  enum.Cmd.html  enum.Opts.html  index.html  sidebar-items.js  struct.Opts.html  struct.Run.html
gyromouse/parse/: enum.ActionModifier.html  enum.ActionType.html  enum.Cmd.html  enum.EventModifier.html  enum.Key.html  enum.SpecialKey.html  fn.action.html  fn.binding.html  fn.cmd.html  fn.comment.html  fn.convert_action_mod.html  fn.joykey.html  fn.jsm_parse.html  fn.keyboardkey.html  fn.keys.html  fn.line.html  fn.map_key.html  fn.mapkey.html  fn.mousekey.html  fn.parse_file.html  fn.special.html  fn.virtkey.html  index.html  sidebar-items.js  struct.JSMAction.html
gyromouse/space_mapper/: fn.map_input.html  index.html  sidebar-items.js  struct.LocalSpace.html  struct.PlayerSpace.html  struct.SimpleFusion.html  struct.WorldSpace.html  trait.SensorFusion.html  trait.SpaceMapper.html
gyromouse/src/: calibration.rs  engine.rs  gyromouse.rs  joystick.rs  main.rs  mapping.rs  mouse.rs  opts.rs  parse.rs  space_mapper.rs
hid-gamepad/: Cargo.toml
hid-gamepad-sys/: Cargo.toml
hid-gamepad-sys/src/: lib.rs
hid-gamepad/src/: lib.rs
joy-infrared/: Cargo.toml
joy-infrared/src/: main.rs  mouse.rs
joy-music/: Cargo.toml
joy-music/src/: main.rs
joycon/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.Calibration.html  struct.IMU.html  struct.Image.html  struct.JoyCon.html  struct.JoyconDriver.html  struct.Report.html
joycon-sys/: Cargo.toml
joycon-sys/src/: accessory.rs  common.rs  imu.rs  input.rs  lib.rs  light.rs  mcu.rs  output.rs  rawid.rs  spi.rs
joycon/calibration/: struct.Calibration.html
joycon/hid/: struct.JoyCon.html  struct.Report.html
joycon/image/: struct.Image.html
joycon/imu_handler/: struct.IMU.html
joycon/src/: calibration.rs  hid.rs  image.rs  imu_handler.rs  lib.rs
joytk/: Cargo.toml  all.html  enum.CalibrateE.html  enum.SetE.html  enum.SubCommand.html  fn.calibrate_gyro.html  fn.calibrate_sticks.html  fn.decode.html  fn.dump.html  fn.get.html  fn.hid_main.html  fn.main.html  fn.monitor.html  fn.pulse_rate.html  fn.raw_sticks.html  fn.reset_calibration.html  fn.restore.html  fn.ringcon.html  fn.set_color.html  index.html  sidebar-items.js  struct.Calibrate.html  struct.Opts.html  struct.Set.html  struct.SetColor.html
joytk/camera/: constant.SCREEN_HEIGHT.html  constant.SCREEN_WIDTH.html  enum.Cmd.html  fn.create_window.html  fn.run.html  index.html  sidebar-items.js
joytk/opts/: enum.CalibrateE.html  enum.RingconE.html  enum.SetE.html  enum.SubCommand.html  fn.is_mac.html  index.html  sidebar-items.js  struct.Calibrate.html  struct.Opts.html  struct.Relay.html  struct.Ringcon.html  struct.Set.html  struct.SetColor.html
joytk/relay/: fn.connect_switch.html  fn.create_sockaddr.html  fn.relay.html  index.html  sidebar-items.js
joytk/src/: camera.rs  interface.rs  main.rs  opts.rs  relay.rs
render/: Cargo.toml
render/src/: camera.rs  main.rs  shader.frag  shader.vert  uniforms.rs
wireshark-joycon/: Cargo.toml  build.rs
wireshark-joycon/src/: lib.rs  wrapper.h
(+518 files in other folders)
