[package]
name = "joy"
version = "0.1.0"
authors = ["yamakaky"]
edition = "2018"

[workspace]
members = [
    "joycon-sys",
]

[dependencies]
anyhow = "1.0"
enigo = { version = "0.0.14", optional = false, default-features = false }
env_logger = "0.7"
hidapi = "1.2"
image = { version = "0.23", optional = false, default-features = false }
joycon-sys = { path = "joycon-sys" }
iced_core = { git = "https://github.com/hecrj/iced", optional = false, default-features = false }
iced_wgpu = { git = "https://github.com/hecrj/iced", optional = false, default-features = false }
iced_winit = { git = "https://github.com/hecrj/iced", optional = false, default-features = false }
vk-shader-macros = { version = "0.2", optional = false, default-features = false }
cgmath = { version = "0.17", optional = false, default-features = false }
bytemuck = { version = "1.2", optional = false, default-features = false }