[package]
name = "bluetooth-relay"
version = "0.1.0"
authors = ["Yamakaky <yamakaky@yamaworld.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluetooth-sys = "0.1"
hidapi = { version = "1.2", default-features = false, features = ["linux-static-hidraw"] }
libc = "0.2"
