[package]
name = "dualshock"
version = "0.1.0"
authors = ["Yamakaky <yamakaky@yamaworld.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
cgmath = "0.17.0"
dualshock-sys = { path = "../dualshock-sys/" }
hidapi = { version = "1.2", default-features = false, features = ["linux-static-hidraw"] }
