[package]
name = "gyromouse"
version = "0.1.0"
authors = ["Mikaël Fourrier <mikael.fourrier@pm.me>"]
edition = "2018"

[features]
hidapi = ["hid-gamepad", "joycon"]
sdl = ["sdl2"]

[dependencies]
anyhow = "1.0"
cgmath = "0.18"
clap = "3.0.0-beta.2"
enigo = "0.0"
# see https://gitlab.com/KonradBorowski/enum-map/-/issues/20
enum-map = "0.6"
hid-gamepad = { path = "../hid-gamepad", optional = true }
joycon = { path = "../joycon", optional = true }
nom = "6.0"
sdl2 = { version = "0.34", optional = true }
