[package]
name = "hid-gamepad-sys"
version = "0.1.0"
authors = ["Yamakaky <yamakaky@yamaworld.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "0.6.4"
hidapi = { version = "1.2", default-features = false, features = ["linux-static-hidraw"] }
cgmath = { version = "0.17", optional = false, default-features = false }
anyhow = "1.0.36"
