[package]
name = "joy-infrared"
version = "0.1.0"
authors = ["yamakaky"]
edition = "2018"

[dependencies]
anyhow = "1.0"
enigo = { version = "0.0.14", optional = false, default-features = false }
env_logger = "0.8"
image = { version = "0.23", optional = false, default-features = false }
iced_core = { version = "0.3", optional = false, default-features = false }
iced_wgpu = { version = "0.3", optional = false, default-features = false }
iced_winit = { version = "0.2", optional = false, default-features = false }
vk-shader-macros = { version = "0.2", optional = false, default-features = false }
cgmath = { version = "0.17", optional = false, default-features = false }
bytemuck = { version = "1.4", optional = false, default-features = false }
joycon = { path = "../joycon" }
smol = { version = "1.2", optional = false, default-features = false }