[package]
name = "joycon-sys"
version = "0.1.0"
authors = ["Yamakaky <yamakaky@yamaworld.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13"
byteorder = "1.3"
num = "0.2"
num-traits = "0.2"
num-derive = "0.2"
cgmath = { version = "0.17", default-features = false }