[package]
name = "joycon"
version = "0.1.0"
authors = ["Yamakaky <yamakaky@yamaworld.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cgmath = { version = "0.17", optional = false, default-features = false }
hidapi = { version = "1.2", default-features = false, features = ["linux-static-hidraw"] }
image = { version = "0.23", optional = false, default-features = false }
joycon-sys = { path = "../joycon-sys" }
hid-gamepad-sys = { path = "../hid-gamepad-sys/" }
