[package]
name = "joytk"
version = "0.1.0"
authors = ["Mikaël Fourrier <mikael.fourrier@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cgmath = "0.18"
clap = "3.0.0-beta.2"
colored = "2.0"
hex = "0.4"
image = "0.23.14"
joycon = { path = "../joycon" }
tracing = "0.1"
tracing-subscriber = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
socket2 = "0.4"
bluetooth-sys = "0.1"
