[package]
name = "joytk"
version = "0.1.0"
authors = ["Mikaël Fourrier <mikael.fourrier@protonmail.com>"]
edition = "2018"

[features]
interface = ["tui", "crossterm"]

[dependencies]
anyhow = "1.0"
cgmath = "0.18"
clap = "3.0.0-beta.2"
colored = "2.0"
hex = "0.4"
image = "0.23.14"
joycon = { path = "../crates/joycon" }
tracing = "0.1"
tracing-subscriber = "0.2"
crossterm = { version = "0.20", optional = true }
tui = { version = "0.16", optional = true, default-features = false, features = ["crossterm"] }
pixels = "0.5"
winit = "0.25"
winit_input_helper = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
socket2 = "0.4"
bluetooth-sys = "0.1"
