[package]
name = "joytk"
license = "MIT"
version = "0.1.0"
authors = ["Mikaël Fourrier <mikael.fourrier@protonmail.com>"]
edition = "2018"

[features]
interface = ["tui", "crossterm"]

[dependencies]
anyhow = "1.0.53"
cgmath = "0.18.0"
clap = { version = "3.1.0", features = ["derive"] }
colored = "2.0.0"
hex = "0.4.3"
image = "0.24.0"
joycon = { path = "../crates/joycon", features = ["ir"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
crossterm = { version = "0.23.0", optional = true }
tui = { version = "0.17.0", optional = true, default-features = false, features = ["crossterm"] }
pixels = "0.9.0"
winit = "0.26.1"
winit_input_helper = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.118"
socket2 = "0.4.4"
bluetooth-sys = "0.1.0"
