[package]
name = "wireshark-joycon"
license = "MIT"
version = "0.1.0"
authors = ["Yamakaky <yamakaky@yamaworld.fr>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
joycon-sys = { path = "../joycon-sys" }

[build-dependencies]
bindgen = "0.57"
