[package]
name = "hid-gamepad-sys"
version = "0.1.0"
authors = ["Yamakaky <yamakaky@yamaworld.fr>"]
edition = "2018"

[features]
default = ["gamepad-driver"]
gamepad-driver = ["hidapi", "anyhow"]

[dependencies]
enum-map = "0.6"
hidapi = { version = "1.2", optional = true, default-features = false, features = ["linux-static-hidraw"] }
cgmath = { version = "0.18", default-features = false }
anyhow = { version = "1.0", optional = true }
