[package]
name = "hid-gamepad-sys"
license = "MIT"
version = "0.1.0"
authors = ["Yamakaky <yamakaky@yamaworld.fr>"]
edition = "2018"


[dependencies]
enum-map = "2.7"
hidapi = { version = "1.2", default-features = false, features = ["linux-static-hidraw"] }
cgmath = { version = "0.18", default-features = false }
anyhow = "1.0"
hid-gamepad-types = { path = "../hid-gamepad-types/" }
