[package]
name = "joycon-sys"
license = "MIT"
version = "0.1.0"
authors = ["Yamakaky <yamakaky@yamaworld.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = { version = "0.13", optional = false, default-features = false }
num = { version = "0.4", optional = false, default-features = false }
num-traits = { version = "0.2", optional = false, default-features = false }
num-derive = { version = "0.3", optional = false, default-features = false }
cgmath = { version = "0.18", optional = false, default-features = false }