[package]
name = "joycon"
license = "MIT"
version = "0.1.0"
authors = ["Yamakaky <yamakaky@yamaworld.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ir = ["image"]

[dependencies]
anyhow = "1.0"
cgmath = { version = "0.18", optional = false, default-features = false }
hidapi = { version = "1.2", default-features = false, features = ["linux-static-hidraw"] }
image = { version = "0.24", features = ["png"], optional = true, default-features = false }
joycon-sys = { path = "../joycon-sys" }
hid-gamepad-sys = { path = "../hid-gamepad-sys/" }
enum-map = "2.7"
tracing = "0.1"
hex = "0.4"
thiserror = "1.0.30"
